# cppbook_companion

cmake/exercises/assertions/: CMakeLists.txt  EnableAssertions.cmake
cmake/exercises/basic/: CMakeLists.txt
cmake/exercises/hello/: CMakeLists.txt
cmake/exercises/sanitizers/: CMakeLists.txt  Sanitizers.cmake
